<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/main_layout"
  style="@style/ContentMain.ConstraintLayout"
  app:layout_behavior="@string/appbar_scrolling_view_behavior"
  tools:context="dev.kelocen.loadstatus.main.MainActivity"
  tools:showIn="@layout/activity_main">

  <!-- Radio List -->
  <RadioGroup
    android:id="@+id/radio_group_item_list"
    style="@style/ContentMain.RadioList"
    app:layout_constraintBottom_toTopOf="@id/custom_button_download"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <!-- Glide Button -->
    <RadioButton
      android:id="@+id/radio_button_glide"
      style="@style/ContentMain.RadioButtons"
      android:text="@string/main_text_glide_by_bumptech" />

    <!-- Load App Button -->
    <RadioButton
      android:id="@+id/radio_button_load_app"
      style="@style/ContentMain.RadioButtons"
      android:text="@string/main_text_loadapp_by_udacity" />

    <!-- Retrofit Button -->
    <RadioButton
      android:id="@+id/radio_button_retrofit"
      style="@style/ContentMain.RadioButtons"
      android:text="@string/main_text_retrofit_by_square" />

    <!-- Custom URL Button -->
    <RadioButton
      android:id="@+id/radio_button_custom_url"
      style="@style/ContentMain.RadioButtons"
      android:text="@string/main_text_custom_url" />

  </RadioGroup>

  <!-- Custom URL Field -->
  <EditText
    android:id="@+id/edit_custom_url"
    style="@style/ContentMain.EditText"
    android:hint="@string/enter_a_custom_download_url"
    android:importantForAutofill="no"
    app:layout_constrainedWidth="true"
    app:layout_constraintBottom_toBottomOf="@id/radio_group_item_list"
    app:layout_constraintEnd_toEndOf="@id/radio_group_item_list"
    app:layout_constraintStart_toStartOf="@id/radio_group_item_list" />

  <!-- Loading Button -->
  <dev.kelocen.loadstatus.button.LoadingButton
    android:id="@+id/custom_button_download"
    style="@style/ContentMain.LoadingButton"
    app:buttonCirclePaint="@color/colorAccent"
    app:buttonDefaultPaint="@color/colorPrimary"
    app:buttonDefaultText="@string/main_label_default_button_text"
    app:buttonLoadingPaint="@color/colorPrimaryDark"
    app:buttonLoadingText="@string/main_label_loading_button_text"
    app:buttonTextPaint="@color/white"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/radio_group_item_list" />

</androidx.constraintlayout.widget.ConstraintLayout>